# pruefpilot-document-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  agents.py  benchmark.py  config.py  data.py  document_ai.py  main.py  mcp_server.py  models.py  providers.py  retrieval.py  security.py  storage.py  store.py  v5.html  v5_cases.py
app/static/: app.js  index.html  styles.css
data/: benchmark_cases.json  case_queue.json  demo_case.json  rules.json  source_manifest.json
deployments/v5-api/: app.py  requirements.txt  v5_cases.py  vercel.json
docs/: aconium-fit.md  architecture.md  interview-deck-v5.1.md  production-roadmap.md  v3-live-deployment.md
evals/: eval_cases.json  run_evals.py
frontend/v5.1/: app.js  index.html  styles.css  vercel.json
scripts/: generate_demo_pdfs.py
tests/: test_agents.py  test_api.py  test_benchmark.py  test_document_ai.py  test_retrieval.py  test_storage.py  test_v2_product.py  test_v5_cases.py
